style.css
* {
    margin: 0;
    padding: 0;

    box-sizing: border-box;

}

:root {
    --default-padding: 30px;
    --white: hsl(0, 0%, 100%);
    --black: hsl(0, 0%, 0%);
    --shadow-grey: hsla(223, 23%, 18%, 1);
    --shadow-grey-dark: rgb(23, 27, 37);
    --default-width: 55px;

    /*
    --grey: rgb(193, 196, 198);
    --space-indigo: rgb(55, 69, 118);
    */
}

html {
    scroll-behavior: smooth;

}

body {
    min-height: 100dvh;
    background-color: var(--shadow-grey);
    font-family: "Orbitron", serif;
    font-optical-sizing: auto;
    color: var(--white);


}

main {
    padding: 0px clamp(25px, 6vw, 100px);
    width: 100%;
    max-width: 1600px;
    padding: 0px clamp(25px, 8.5vw, 150px);
    margin: 0px auto;

}




.bold {
    font-weight: 700;
    font-size: clamp(1.5rem, 7vw, 3rem);

}

.normal-text {
    font-weight: 400;
    font-size: clamp(2.75rem, 8vw, 5rem);

}





#navbar {
    /* display: flex; */
    display: flex;
    padding: var(--default-padding) clamp(20px, 5vw, 50px);
    justify-content: space-between;
    align-items: center;
    background-color: var(--shadow-grey-dark);
}





a {
    text-decoration: none;
    color: inherit;
}

.desktop-nav-row {
    display: flex;
    justify-content: space-between;
    align-items: center;


}

.desktop-nav-row li {
    font-size: clamp(1rem, 1.25vw, 1.125rem);
}

.content-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 15dvh;
}


#intro {
    align-items: flex-start;
    min-height: 80dvh;
    max-width: 1000px;
    margin: 0px auto;
    padding-top: 0dvh;

}

#about {}

#experience {}

#projects {}

#skills-interests {}

#about-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 15dvh;

}


#about-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;


}

.sharp-edge {
    width: 100%;
    padding: 1px 0px;
    background-color: var(--white);
    margin: 20px 0px 80px 0;
    border: 2px solid var(--white);
    /* border-radius: 0px 60px 0px 60px; */
    transform: skewX(55deg);
}

#shorter-edge {
    width: 75%;
    margin-top: 80px;
    margin-bottom: 30px;
}


#polaroid {
    background-color: var(--shadow-grey-dark);
    padding: 15px 20px 100px 20px;
    margin: 25px 0px 60px 0px;

    /*box-shadow: 10px 10px 10px var(--shadow-grey-dark); */
}

.card .browser {
    margin-bottom: 20px;
}

.browser {
    display: flex;
    flex-direction: column;
    border: 3px solid var(--shadow-grey-dark);
}

.browser img {
    margin-bottom: 0px !important;
}

#browser-fill {
    background-color: var(--shadow-grey);
}

.browser-tab {
    display: flex;
    padding: 15px;
    background-color: var(--shadow-grey-dark);
}

#browser-tab-color {
    background-color: var(--shadow-grey);
    padding: 10px;
}

.desktop-browser {
    display: none;
}

.circle {
    height: 10px;
    width: 10px;
    margin-right: 12px;
    border-radius: 50%;

    &:nth-child(1) {
        background-color: #be2c2c;

    }

    &:nth-child(2) {
        background-color: #e5c63a;

    }

    &:nth-child(3) {
        background-color: #2c7d39;

    }
}






#browser-text {
    padding: 30px 10px;
}

.txt-spacing {
    margin: 5px auto 15px auto;
    padding: 0px 20px;

}

#large-img {
    width: 225px;
}

.project-icons {
    list-style-type: none;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 25px;



}

.image-container {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 60px;
    height: 50px;
    padding: 5px;
    margin-bottom: 5px;

}

.image-container img {
    margin-bottom: 0px !important;
    width: 100% !important;
    height: 100%;

    object-fit: contain;
}

.project-icons li {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 5px;

}



.project-icons li span {
    font-size: .55rem;
    padding: 0px 10px;
}


.button-theme {
    font-family: inherit;
    font-size: 15px;
    width: 200px;
    height: 50px;
    background-color: transparent;
    color: var(--white);
    border-radius: 8px;
    border: 2px solid var(--white);
    margin-top: 20px;
}

#letter-e {
    width: var(--default-width);

}

#menu-icon {
    width: var(--default-width);
}

#li-icon {
    width: 40px;
    margin-bottom: 10px;

}

.icon {
    width: 45px;

}

#social-icons {
    display: none;
}



#hand-wave {
    display: none;
}

picture {
    display: flex;
    justify-content: center;
    align-self: center;
}



#arrow {
    display: block;
    position: absolute;
    bottom: clamp(5px, 3dvh, 30px);
    width: 65px;
}

.arrow-styling {
    border: solid var(--white);
    border-width: 0px 3px 3px 0;
    display: inline-block;
    align-self: center;
    padding: 5px;
    margin-bottom: 5px;
}

.down {
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
}


#code-image {
    margin-bottom: 20px;
    width: clamp(100px, 10vw, 145px);



}



#desktop-nav {
    display: none;
}

.skip {
    list-style-type: none;
    counter-increment: none;
    border: 2px solid var(--white);
    border-radius: 5px;
    padding: 10px;
    margin-right: 0px;

}

#skip-desktop {
    margin-left: -30px;
}

#skip-mobile {
    text-align: center;
    padding: 15px 25px;
}

.devicon-white {
    filter: brightness(0) invert(1);
}



.card {
    background-color: var(--shadow-grey-dark);
    padding: 15px;
    margin-top: 30px;

}

.card p {
    margin: 15px 0px;
}

.card img {
    width: 60px;
    margin-bottom: 10px;
}

.project-card {
    margin: 5px 0px 45px 0px;
}

.project-links {
    display: flex;
    align-items: center;
    margin-top: 10px;
}

.project-links h2 {
    margin-right: 10px;
}

.project-links img {
    width: 25px;
    margin-bottom: 0px !important;
    padding-top: 5px;
}
/* ... */

